Update project.toml; add Compatibility block

--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,13 @@ ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
+[compat]
+julia = "1.3.0"
+"PDMats"           = "0.9.11"
+"Distributions"    = "0.21.12"
+"StatsPlots"       = "0.13.0"
+"IJulia"           = "1.20.2"
+"ProgressMeter"    = "1.2.0"
+"Gadfly"           = "1.0.1"
+"StatsFuns"        = "0.9.3"
+"SpecialFunctions" = "0.9.0"
